Adiciona login, cadastro, logout; Adiciona página inicial e estilos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,24 +9,52 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+<body>
+  <nav id="navbar-c" class="navbar navbar-expand-lg navbar-light bg-light">
+      <%= link_to home_index_path, class: "navbar-brand" do%>
+        <%= image_tag ('/assets/logo-icon-blue.png'), class: 'img-nav' %>
+      <% end %>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-auth" aria-controls="nav-auth" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="nav-auth">
+      <ul class="navbar-nav ml-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to 'Sair', destroy_user_session_path, method: :delete , class:"nav-link"%>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Cadastre-se', new_user_registration_path, class:"nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Login', new_user_session_path, class:"nav-link"%>
+          </li>
+
+        <% end %>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container alert-app">
     <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
+      <div class="alert alert-success  alert-dismissible fade show" role="alert">
+        <%= notice %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
     <% end %>
     <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <%= alert %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
     <% end %>
-
-    <p class="navbar-text float-right">
-      <% if user_signed_in? %>
-        Logged in as <strong><%= current_user.email %></strong>.
-        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-      <% else %>
-        <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-      <% end %>
-      </p>
+  </div>
 
     <%= yield %>
   </body>
