--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,38 @@
-<h2>Sign up</h2>
+<div class="container default-form">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <h2 class="title">Cadastre-se</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="form-group">
+          <%= f.label 'Nome' %><br />
+          <%= f.text_field :name, autofocus: true, autocomplete: "name", class:'form-control'%>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class:'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password, 'Senha' %>
+          <% if @minimum_password_length %>
+          <em>(Mínimo <%= @minimum_password_length %> caracteres)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password", class:'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password_confirmation, 'Confirme a senha' %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class:'form-control' %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Cadastrar", class:'btn btn-catarsinho'%>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
