--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -33,6 +33,9 @@
           <%= f.submit "Cadastrar", class:'btn btn-catarsinho'%>
         </div>
       <% end %>
+
+      <br/>
+      <%= link_to "Já tenho uma conta",  new_user_session_path %>
     </div>
   </div>
 </div>
