--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,16 +11,28 @@
 
 <body>
   <nav id="navbar-c" class="navbar navbar-expand-lg navbar-light bg-light">
-      <%= link_to home_index_path, class: "navbar-brand" do%>
-        <%= image_tag ('/assets/logo-icon-blue.png'), class: 'img-nav' %>
-      <% end %>
+    <%= link_to home_index_path, class: "navbar-brand" do%>
+      <%= image_tag ('/assets/logo-icon-blue.png'), class: 'img-nav' %>
+    <% end %>
+
+    <%= display_find_form %>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-auth" aria-controls="nav-auth" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="nav-auth">
       <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <%= link_to 'Apoie', find_projects_path, class:"nav-link"%>
+          </li>
         <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to 'Crie Seu Projeto', new_project_path, class:"nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Meus Projetos', projects_path, class:"nav-link"%>
+          </li>
           <li class="nav-item">
             <%= link_to 'Sair', destroy_user_session_path, method: :delete , class:"nav-link"%>
           </li>
@@ -31,7 +43,6 @@
           <li class="nav-item">
             <%= link_to 'Login', new_user_session_path, class:"nav-link"%>
           </li>
-
         <% end %>
       </ul>
     </div>
