Adiciona funcionalidade de Doação (com testes)

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -36,7 +36,7 @@
           </div>
           <div class="w-100 text-center box-blue">
             <h2>Total Arrecadado</h2>
-            <p><%= convert_money(@project.goal) %></p>
+            <p><%= convert_money(@project.total_donations) %></p>
           </div>
         </div>
       </div>
