--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -8,7 +8,7 @@
 
   <div class="form-group">
     <%= f.label 'Valor' %><br />
-    <%= f.number_field :value, class:'form-control money', min: 1 %>
+    <%= f.number_field :value, class:'form-control money', min: 1, required: true %>
   </div>
 
   <div class="actions">
