--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,6 +15,11 @@
 
       <div class="row">
         <div class="col-md-8 content-project">
+          <div class="row">
+            <div class="col-md-12">
+            <%=  display_image(project: @project) %>
+            </div>
+          </div>
           <div class="description text-justify">
             <%= @project.description %>
           </div>
