--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -206,6 +206,17 @@ body {
     margin-top: 20px;
   }
 
+  .img-project {
+    margin-bottom: 20px;
+
+    img {
+      border-radius: 10px;
+      width: 100%;
+      height: 338px;
+      object-fit: cover;
+    }
+  }
+
   .subtitle {
     font-size: 12px;
     color: black;
